# flywheel-ml

./: .gitignore  Cargo.toml  README.md
.githooks/: pre-commit
.github/workflows/: ci.yml  publish.yml
crates/flywheel/: Cargo.toml
crates/flywheel-client/: Cargo.toml
crates/flywheel-client/src/: client.rs  lib.rs
crates/flywheel-core/: Cargo.toml
crates/flywheel-core/src/: feature.rs
crates/flywheel-db/: Cargo.toml
crates/flywheel-db/src/: lib.rs  repo.rs
crates/flywheel-db/src/entity/: drift_event.rs  mod.rs  prediction.rs
crates/flywheel-db/src/migration/: m20240101_000001_create_tables.rs
crates/flywheel-drift/: Cargo.toml
crates/flywheel-drift/src/: statistical.rs
crates/flywheel-dsl/: Cargo.toml
crates/flywheel-dsl/src/: builder.rs  parser.rs  types.rs  validation.rs
crates/flywheel-inference/: Cargo.toml
crates/flywheel-inference/src/: batch.rs  circuit_breaker.rs  client.rs
crates/flywheel-ml/: Cargo.toml
crates/flywheel-ml-client/: Cargo.toml
crates/flywheel-ml-client/src/: client.rs  lib.rs
crates/flywheel-ml-core/src/: error.rs  feedback.rs  lib.rs  model.rs  prediction.rs
crates/flywheel-ml-db/: Cargo.toml
crates/flywheel-ml-db/src/: repo.rs
crates/flywheel-ml-db/src/entity/: feedback.rs  model_version.rs  pipeline.rs  pipeline_run.rs
crates/flywheel-ml-drift/: Cargo.toml
crates/flywheel-ml-drift/src/: detector.rs  lib.rs  performance.rs
crates/flywheel-ml-dsl/src/: builder.rs  convert.rs  lib.rs  parser.rs  types.rs
crates/flywheel-ml-inference/: Cargo.toml
crates/flywheel-ml-inference/src/: client.rs  lib.rs
crates/flywheel-ml-operator/: Cargo.toml
crates/flywheel-ml-operator/src/crd/: mod.rs  model.rs
crates/flywheel-ml-proto/proto/: control.proto  health.proto  inference.proto
crates/flywheel-ml-proto/src/: lib.rs
crates/flywheel-ml-server/: Cargo.toml
crates/flywheel-ml-server/src/: main.rs  registry.rs
crates/flywheel-ml-server/src/executor/: engine.rs  mod.rs  runner.rs  stage.rs
crates/flywheel-ml-server/src/grpc/: control_service.rs  health_service.rs  inference_service.rs  mod.rs
crates/flywheel-ml-training/: Cargo.toml
crates/flywheel-ml-training/src/: exporter.rs  format.rs  lib.rs  sampling.rs
crates/flywheel-ml-transform/: Cargo.toml
crates/flywheel-ml-transform/src/: feedback_transform.rs  lib.rs
crates/flywheel-ml/src/: main.rs  output.rs
crates/flywheel-ml/src/commands/: apply.rs  drift.rs  export.rs  graph.rs  health.rs  logs.rs  mod.rs  model.rs  pipeline.rs  stats.rs  validate.rs
crates/flywheel-operator/: Cargo.toml
crates/flywheel-operator/src/: lib.rs
crates/flywheel-operator/src/crd/: flywheel_pipeline.rs
crates/flywheel-proto/: Cargo.toml  build.rs
crates/flywheel-proto/proto/: control.proto  health.proto  inference.proto
crates/flywheel-proto/src/: lib.rs
crates/flywheel-server/: Cargo.toml
crates/flywheel-server/src/: config.rs  health.rs  main.rs
crates/flywheel-server/src/grpc/: control_service.rs  health_service.rs  mod.rs
crates/flywheel-training/: Cargo.toml
crates/flywheel-training/src/: exporter.rs  format.rs  labeler.rs  lib.rs
crates/flywheel-transform/: Cargo.toml
crates/flywheel-transform/src/: drift_transform.rs  feature_transform.rs  feedback_transform.rs  inference_transform.rs
crates/flywheel/src/: main.rs
crates/flywheel/src/commands/: delete.rs  describe.rs  drift.rs  export.rs  get.rs  graph.rs  health.rs  logs.rs  mod.rs  model.rs  stats.rs  validate.rs
examples/: anomaly-detection.yaml
scripts/: publish.sh  setup-hooks.sh
