[workspace]
resolver = "2"
members = [
    "crates/flywheel",
    "crates/flywheel-client",
    "crates/flywheel-core",
    "crates/flywheel-db",
    "crates/flywheel-drift",
    "crates/flywheel-dsl",
    "crates/flywheel-inference",
    "crates/flywheel-operator",
    "crates/flywheel-proto",
    "crates/flywheel-server",
    "crates/flywheel-training",
    "crates/flywheel-transform",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Alex Choi"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/alexchoi0/flywheel"
rust-version = "1.75"

[workspace.dependencies]
# Internal crates
flywheel-ml-core = { path = "crates/flywheel-core" }
flywheel-ml-client = { path = "crates/flywheel-client" }
flywheel-ml-db = { path = "crates/flywheel-db" }
flywheel-ml-drift = { path = "crates/flywheel-drift" }
flywheel-ml-dsl = { path = "crates/flywheel-dsl" }
flywheel-ml-inference = { path = "crates/flywheel-inference" }
flywheel-ml-operator = { path = "crates/flywheel-operator" }
flywheel-ml-proto = { path = "crates/flywheel-proto" }
flywheel-ml-server = { path = "crates/flywheel-server" }
flywheel-ml-training = { path = "crates/flywheel-training" }
flywheel-ml-transform = { path = "crates/flywheel-transform" }

# Conveyor dependencies (adjust path as needed)
# conveyor-dsl = { path = "../etl-router/crates/conveyor-dsl" }
# conveyor-proto = { path = "../etl-router/crates/conveyor-proto" }
# conveyor-routing = { path = "../etl-router/crates/conveyor-routing" }

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# gRPC
tonic = "0.12"
tonic-build = "0.12"
prost = "0.13"
prost-types = "0.13"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Database (SeaORM)
sea-orm = { version = "1.0", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
sea-orm-migration = { version = "1.0", features = ["sqlx-postgres", "runtime-tokio-rustls"] }

# Schema generation
schemars = "0.8"

# CLI
clap = { version = "4.4", features = ["derive", "env"] }

# Configuration
config = "0.14"
toml = "0.8"

# Tracing/Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Metrics
prometheus = "0.13"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Utilities
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
bytes = "1.5"
futures = "0.3"
dashmap = "6.0"
parking_lot = "0.12"

# Testing
tokio-test = "0.4"

[profile.release]
lto = true
codegen-units = 1
strip = true
