[workspace]
resolver = "2"
members = [
    "crates/flywheel-ml",
    "crates/flywheel-ml-client",
    "crates/flywheel-ml-core",
    "crates/flywheel-ml-db",
    "crates/flywheel-ml-drift",
    "crates/flywheel-ml-dsl",
    "crates/flywheel-ml-inference",
    "crates/flywheel-ml-operator",
    "crates/flywheel-ml-proto",
    "crates/flywheel-ml-server",
    "crates/flywheel-ml-training",
    "crates/flywheel-ml-transform",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Alex Choi"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/alexchoi0/flywheel"
rust-version = "1.75"

[workspace.dependencies]
# Internal crates
flywheel-ml-core = { path = "crates/flywheel-ml-core" }
flywheel-ml-client = { path = "crates/flywheel-ml-client" }
flywheel-ml-db = { path = "crates/flywheel-ml-db" }
flywheel-ml-drift = { path = "crates/flywheel-ml-drift" }
flywheel-ml-dsl = { path = "crates/flywheel-ml-dsl" }
flywheel-ml-inference = { path = "crates/flywheel-ml-inference" }
flywheel-ml-operator = { path = "crates/flywheel-ml-operator" }
flywheel-ml-proto = { path = "crates/flywheel-ml-proto" }
flywheel-ml-server = { path = "crates/flywheel-ml-server" }
flywheel-ml-training = { path = "crates/flywheel-ml-training" }
flywheel-ml-transform = { path = "crates/flywheel-ml-transform" }

# Conveyor dependencies (adjust path as needed)
# conveyor-dsl = { path = "../etl-router/crates/conveyor-dsl" }
# conveyor-proto = { path = "../etl-router/crates/conveyor-proto" }
# conveyor-routing = { path = "../etl-router/crates/conveyor-routing" }

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# gRPC
tonic = "0.12"
tonic-build = "0.12"
prost = "0.13"
prost-types = "0.13"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Database (SeaORM)
sea-orm = { version = "1.0", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
sea-orm-migration = { version = "1.0", features = ["sqlx-postgres", "runtime-tokio-rustls"] }

# Schema generation
schemars = "0.8"

# CLI
clap = { version = "4.4", features = ["derive", "env"] }

# Configuration
config = "0.14"
toml = "0.8"

# Tracing/Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Metrics
prometheus = "0.13"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Utilities
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
bytes = "1.5"
futures = "0.3"
dashmap = "6.0"
parking_lot = "0.12"

# Data formats
arrow = { version = "53", default-features = false, features = ["prettyprint"] }
parquet = { version = "53", default-features = false, features = ["arrow", "async"] }
csv = "1.3"
rand = "0.8"

# Testing
tokio-test = "0.4"

[profile.release]
lto = true
codegen-units = 1
strip = true
