[package]
name = "flywheel-client"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Flywheel client library"

[dependencies]
flywheel-core.workspace = true
flywheel-proto.workspace = true

tonic.workspace = true
tokio.workspace = true

serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
