[package]
name = "flywheel-ml-client"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Flywheel client library"
readme = "../../README.md"
keywords = ["ml", "aiops", "client", "grpc"]
categories = ["api-bindings"]

[dependencies]
flywheel-ml-core.workspace = true
flywheel-ml-proto.workspace = true

tonic.workspace = true
tokio.workspace = true

serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
