[package]
name = "flywheel-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core traits and types for Flywheel AIOps ML pipeline framework"

[dependencies]
async-trait.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
