[package]
name = "flywheel-ml-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core traits and types for Flywheel AIOps ML pipeline framework"
readme = "../../README.md"
keywords = ["ml", "aiops", "pipeline", "machine-learning"]
categories = ["data-structures", "development-tools"]

[dependencies]
async-trait.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
