[package]
name = "flywheel-dsl"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "DSL for Flywheel pipelines, extending Conveyor"

[dependencies]
flywheel-core.workspace = true

serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
schemars.workspace = true

thiserror.workspace = true
