[package]
name = "flywheel-ml-dsl"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "DSL for Flywheel pipelines"
readme = "../../README.md"
keywords = ["ml", "aiops", "dsl", "pipeline"]
categories = ["config", "development-tools"]

[dependencies]
flywheel-ml-core.workspace = true

serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
schemars.workspace = true

thiserror.workspace = true
