[package]
name = "flywheel-ml-db"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "SeaORM database layer for Flywheel"
readme = "../../README.md"
keywords = ["ml", "aiops", "database", "seaorm"]
categories = ["database"]

[dependencies]
flywheel-ml-core.workspace = true

sea-orm.workspace = true
sea-orm-migration.workspace = true

async-trait.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true
