[package]
name = "flywheel-ml-drift"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Drift detection for Flywheel"
readme = "../../README.md"
keywords = ["ml", "aiops", "drift-detection", "monitoring"]
categories = ["science"]

[dependencies]
flywheel-ml-core.workspace = true

async-trait.workspace = true
chrono.workspace = true
parking_lot.workspace = true

serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
