[package]
name = "flywheel-ml-inference"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "ML inference runtime for Flywheel"
readme = "../../README.md"
keywords = ["ml", "aiops", "inference", "machine-learning"]
categories = ["science"]

[dependencies]
flywheel-ml-core.workspace = true
flywheel-ml-proto.workspace = true

tonic.workspace = true
tokio.workspace = true

async-trait.workspace = true
dashmap.workspace = true
parking_lot.workspace = true

serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
