[package]
name = "flywheel-ml-operator"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Kubernetes operator for Flywheel"
readme = "../../README.md"
keywords = ["ml", "aiops", "kubernetes", "operator"]
categories = ["development-tools"]

[dependencies]
flywheel-ml-core.workspace = true
flywheel-ml-dsl.workspace = true

tokio.workspace = true

serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
schemars.workspace = true
