[package]
name = "flywheel-ml-training"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Training data export for Flywheel"
readme = "../../README.md"
keywords = ["ml", "aiops", "training", "data-export"]
categories = ["science"]

[dependencies]
flywheel-ml-core.workspace = true

async-trait.workspace = true
bytes.workspace = true
chrono.workspace = true
futures.workspace = true
tokio.workspace = true

serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true

arrow.workspace = true
parquet.workspace = true
csv.workspace = true
rand.workspace = true

[dev-dependencies]
tempfile = "3.10"
