[package]
name = "flywheel-ml"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Flywheel CLI - AIOps ML pipeline management"
readme = "../../README.md"
keywords = ["ml", "aiops", "pipeline", "inference", "drift-detection"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "flywheel-ml"
path = "src/main.rs"

[dependencies]
flywheel-ml-client.workspace = true
flywheel-ml-core.workspace = true
flywheel-ml-dsl.workspace = true

clap.workspace = true
tokio.workspace = true
chrono.workspace = true

serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true

anyhow.workspace = true
thiserror.workspace = true
