[package]
name = "flywheel-proto"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "gRPC protocol definitions for Flywheel"

[dependencies]
prost.workspace = true
prost-types.workspace = true
tonic.workspace = true

[build-dependencies]
tonic-build.workspace = true
