[package]
name = "flywheel-ml-proto"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "gRPC protocol definitions for Flywheel"
readme = "../../README.md"
keywords = ["ml", "aiops", "grpc", "protobuf"]
categories = ["network-programming"]

[dependencies]
prost.workspace = true
prost-types.workspace = true
tonic.workspace = true

[build-dependencies]
tonic-build.workspace = true
