[package]
name = "flywheel-ml-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Flywheel server binary"
readme = "../../README.md"
keywords = ["ml", "aiops", "server", "grpc"]
categories = ["command-line-utilities"]

[[bin]]
name = "flywheel-server"
path = "src/main.rs"

[dependencies]
flywheel-ml-core.workspace = true
flywheel-ml-db.workspace = true
flywheel-ml-proto.workspace = true

tonic.workspace = true
tokio.workspace = true
sea-orm.workspace = true
sea-orm-migration.workspace = true
uuid.workspace = true

clap.workspace = true
config.workspace = true
toml.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true
prometheus.workspace = true

serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
