[package]
name = "flywheel-training"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Training data export for Flywheel"

[dependencies]
flywheel-core.workspace = true

async-trait.workspace = true
bytes.workspace = true
chrono.workspace = true
futures.workspace = true
tokio.workspace = true

serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
