[package]
name = "flywheel-ml-transform"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Transform extensions for Flywheel"
readme = "../../README.md"
keywords = ["ml", "aiops", "transform", "pipeline"]
categories = ["science"]

[dependencies]
flywheel-ml-core.workspace = true
flywheel-ml-inference.workspace = true
flywheel-ml-drift.workspace = true

async-trait.workspace = true
tokio.workspace = true

serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
