[package]
name = "flywheel"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Flywheel CLI - AIOps ML pipeline management"

[[bin]]
name = "flywheel"
path = "src/main.rs"

[dependencies]
flywheel-client.workspace = true
flywheel-core.workspace = true
flywheel-dsl.workspace = true

clap.workspace = true
tokio.workspace = true

serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true

anyhow.workspace = true
thiserror.workspace = true
